# Rust-Workshop

./: README.md
cell/: Cargo.toml
cell/src/: main.rs
datapine/: Cargo.toml  Dockerfile  README.md
datapine/doc/: cmd.md
datapine/src/: cmd.rs  error.rs  lib.rs  store.rs
datapine/src/store/: action.rs  dump.rs  simmlarity_search.rs  tests.rs
vector-db/: Cargo.toml
